@@ -1,3 +1,8 @@
+2002-06-27  Don Porter  <dgp@users.sourceforge.net>
+
+	* library/tcltest/tcltest.tcl:  Made sure that the TCLTEST_OPTIONS
+	environment variablle configures tcltest at package load time.
+
 2002-06-26  Vince Darley  <vincentdarley@users.sourceforge.net>
 
 	* tests/fileSystem.test: 
